Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/Salary_Slip__c.object-meta.xml
<CustomObject>
    <label>Salary Slip</label>
    <nameField>
        <displayFormat>websfdc-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Slips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>