Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Appraisal_Letter__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal Letter</label>
    <referenceTo>Appraisal_Letter__c</referenceTo>
    <relationshipLabel>Salary Slips</relationshipLabel>
    <relationshipName>Salary_Slips</relationshipName>
    <type>Lookup</type>
</CustomField>