Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <formula>IF( ISBLANK( Effective_Working_Days__c ) , IF( !ISBLANK(Appraisal_Letter__c), (Appraisal_Letter__r.Appraisal_To__c*50)/1200,  Candidate_Name__r.Basic__c /12)
, IF( !ISBLANK(Appraisal_Letter__c),( (Appraisal_Letter__r.Appraisal_To__c*49.594)/1200)/ Month_Days__c  *  Effective_Working_Days__c , (Candidate_Name__r.Basic__c/12))/ Month_Days__c  *  Effective_Working_Days__c)</formula>
    <label>Basic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>