Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Calculate_working_Dates__c.field-meta.xml
<CustomField>
    <fullName>Calculate_working_Dates__c</fullName>
    <formula>IF(
MONTH( Salary_Year__c ) = 12,
DATE( YEAR( Salary_Year__c ), 12, 31 ) ,
DATE( YEAR( Salary_Year__c ),
MONTH ( Salary_Year__c ) + 1, 1 ) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate working Dates</label>
    <type>Date</type>
</CustomField>