Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <label>Candidate Name</label>
    <referenceTo>Candidate_Information__c</referenceTo>
    <relationshipLabel>Salary Slips</relationshipLabel>
    <relationshipName>Salary_Slips</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>