Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>Candidate_Name__r.Candidate_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation</label>
    <type>Text</type>
</CustomField>