Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Effective_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Effective_Working_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Effective Working Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>