Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/ESI_Number__c.field-meta.xml
<CustomField>
    <fullName>ESI_Number__c</fullName>
    <label>ESI Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>