Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Food_All__c.field-meta.xml
<CustomField>
    <fullName>Food_All__c</fullName>
    <formula>IF( ISBLANK( Effective_Working_Days__c ) , IF( !ISBLANK(Appraisal_Letter__c), (Appraisal_Letter__r.Appraisal_To__c*3)/1200,  Candidate_Name__r.Food_All__c /12)
, IF( !ISBLANK(Appraisal_Letter__c),( (Appraisal_Letter__r.Appraisal_To__c*3)/1200)/ Month_Days__c * Effective_Working_Days__c , (Candidate_Name__r.Food_All__c /12))/ Month_Days__c * Effective_Working_Days__c)</formula>
    <label>Food All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>