Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Max_day_of_the_month__c.field-meta.xml
<CustomField>
    <fullName>Max_day_of_the_month__c</fullName>
    <formula>IF( MONTH( Salary_Year__c) = 12, 
DATE( YEAR( Salary_Year__c ), 12, 31 ), 
DATE( YEAR( Salary_Year__c ), MONTH( Salary_Year__c ) + 1, 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max day of the month</label>
    <type>Date</type>
</CustomField>