Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Month_Days__c.field-meta.xml
<CustomField>
    <fullName>Month_Days__c</fullName>
    <formula>DAY(Max_day_of_the_month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>