Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/salary_Head__c.field-meta.xml
<CustomField>
    <fullName>salary_Head__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salary Head</label>
    <length>20</length>
    <type>Text</type>
</CustomField>