Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Salary_Year__c.field-meta.xml
<CustomField>
    <fullName>Salary_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salary Year</label>
    <type>Date</type>
</CustomField>