Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/fields/Total_Month_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Salary__c</fullName>
    <formula>Basic__c +HRA__c+Uniform_All__c+Food_All__c+Medical_Allowance__c+Travel_Allowance__c+400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Month Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>