Githubsalesforcebackup/force-app/main/default/objects/Salary_Slip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Candidate_Name__c</columns>
    <columns>NAME</columns>
    <columns>Total_Month_Salary__c</columns>
    <columns>Salary_Month__c</columns>
    <columns>Salary_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>